[package]
name = "openark-gateway-filter-ollama"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
proxy-wasm = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde-json = { workspace = true, features = ["std"] }
tracing = { workspace = true }
