[package]
name = "openark-kiss-ansible"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = [
    "anyhow/std",
    "ipnet/std",
    "itertools/use_std",
    "openark-kiss-api/std",
    # "k8s-openapi/std",
    # "schemars/std",
    "serde/std",
    "uuid/std",
]

# TLS
tls-aws-lc-rs = ["kube/rustls-tls"]
tls-openssl = ["kube/openssl-tls"]
tls-ring = ["kube/rustls-tls"]

# Tracing
tracing = ["dep:tracing"]

[dependencies]
openark-kiss-api = { workspace = true, features = ["kube"] }

anyhow = { workspace = true }
convert-case = { workspace = true }
ipnet = { workspace = true, features = ["schemars", "serde"] }
itertools = { workspace = true }
k8s-openapi = { workspace = true, features = ["schemars"] }
kube = { workspace = true, features = ["client", "runtime"] }
schemars = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }
