[package]
name = "openark-spectrum-operator"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "tls-default",
    "opentelemetry-all",
    # "opentelemetry-otlp",
]

# OpenTelemetry
opentelemetry = ["openark-core/opentelemetry", "tracing"]
opentelemetry-all = [
    "openark-core/opentelemetry-all",
    "opentelemetry-logs",
    "opentelemetry-metrics",
    "opentelemetry-trace",
]
opentelemetry-otlp = ["openark-core/opentelemetry-otlp", "opentelemetry"]

# OpenTelemetry pillars and functions
opentelemetry-logs = ["openark-core/opentelemetry-logs", "opentelemetry"]
opentelemetry-metrics = ["openark-core/opentelemetry-metrics", "opentelemetry"]
opentelemetry-trace = ["openark-core/opentelemetry-trace", "opentelemetry"]

# TLS
tls-default = ["tls-aws-lc-rs"]
tls-aws-lc-rs = ["kube/rustls-tls", "openark-core/tls-aws-lc-rs"]
tls-openssl = ["kube/openssl-tls", "openark-core/tls-openssl"]
tls-ring = ["kube/rustls-tls", "openark-core/tls-ring"]

# Tracing
tracing = [
    "dep:tracing",
    "openark-core/tracing",
    "openark-spectrum-api/tracing",
]

[dependencies]
openark-core = { workspace = true, features = [
    "clap",
    "operator",
    "reqwest",
    "std",
] }
openark-spectrum-api = { workspace = true, features = [
    "client",
    "kube",
    "opeartor",
    "send",
    "std",
] }

anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "std"] }
futures = { workspace = true, features = ["std"] }
good-lp = { workspace = true }
k8s-openapi = { workspace = true, features = [
    "schemars",
    # "std",
] }
kube = { workspace = true, features = ["runtime"] }
ordered-float = { workspace = true, features = ["std"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, optional = true, features = [
    "attributes",
    "std",
] }
url = { workspace = true, features = ["std"] }
