[package]
name = "openark-spectrum-pool"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "cors-allow-any",
    "tls-default",
    "opentelemetry-all",
    # "opentelemetry-otlp",
]

cors-allow-any = ["dep:actix-cors"]

# OpenTelemetry
opentelemetry = [
    "dep:actix-web-opentelemetry",
    "openark-core/opentelemetry",
    "tracing",
]
opentelemetry-all = [
    "openark-core/opentelemetry-all",
    "opentelemetry-logs",
    "opentelemetry-metrics",
    "opentelemetry-trace",
]
opentelemetry-otlp = ["openark-core/opentelemetry-otlp", "opentelemetry"]

# OpenTelemetry pillars and functions
opentelemetry-logs = ["openark-core/opentelemetry-logs", "opentelemetry"]
opentelemetry-metrics = [
    "actix-web-opentelemetry?/metrics",
    "openark-core/opentelemetry-metrics",
    "opentelemetry",
]
opentelemetry-trace = ["openark-core/opentelemetry-trace", "opentelemetry"]

# TLS
tls-default = ["tls-aws-lc-rs"]
tls-aws-lc-rs = [
    "actix-web/rustls-0_23",
    "openark-core/tls-aws-lc-rs",
    "reqwest/rustls-tls",
]
tls-openssl = [
    "actix-web/openssl",
    "openark-core/tls-openssl",
    "reqwest/native-tls",
]
tls-ring = [
    "actix-web/rustls-0_23",
    "openark-core/tls-ring",
    "reqwest/rustls-tls",
]

# Tracing
tracing = [
    "dep:tracing",
    "openark-core/tracing",
    "openark-spectrum-api/tracing",
    "redb/logging",
]

[dependencies]
openark-core = { workspace = true, features = [
    "clap",
    "client",
    "reqwest",
    "std",
] }
openark-spectrum-api = { workspace = true, features = [
    "client",
    "kube",
    "std",
] }

actix-cors = { workspace = true, optional = true }
actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true, optional = true }
anyhow = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["serde", "std"] }
clap = { workspace = true, features = ["derive", "std"] }
k8s-openapi = { workspace = true, features = [
    # "std",
] }
redb = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true, optional = true, features = [
    "attributes",
    "std",
] }
url = { workspace = true, features = ["std"] }
