[package]
name = "openark-spectrum-scheduler"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Tracing
tracing = ["dep:tracing", "openark-spectrum-api/tracing"]

[dependencies]
openark-spectrum-api = { workspace = true, features = ["kube", "std"] }

good-lp = { workspace = true }
ordered-float = { workspace = true, features = ["std"] }
tracing = { workspace = true, optional = true }
