[package]
name = "openark-vine-dashboard-api"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = [
    "anyhow?/std",
    "chrono/std",
    "clap?/std",
    "http?/std",
    # "k8s-openapi?/std",
    "openark-vine-oauth/std",
    # "schemars?/std",
    "serde?/std",
    "serde-json/std",
    "strum/std",
    "thiserror/std",
    "url/std",
]

clap = ["dep:clap", "std"]
client = [
    "dep:anyhow",
    "dep:async-trait",
    "dep:http",
    "dep:openark-core",
    "openark-vine-oauth/client",
    "serde",
    "std",
]
kube = ["dep:k8s-openapi", "dep:kube", "schemars", "std"]
schemars = ["dep:schemars", "openark-vine-oauth/schemars", "serde"]
serde = ["chrono/serde", "dep:serde", "openark-vine-oauth/serde", "url/serde"]

# Async trait bounds
send = ["openark-vine-oauth/send"]

# TLS
tls-aws-lc-rs = ["kube?/rustls-tls", "openark-vine-oauth/tls-aws-lc-rs"]
tls-openssl = ["kube?/openssl-tls", "openark-vine-oauth/tls-openssl"]
tls-ring = ["kube?/rustls-tls", "openark-vine-oauth/tls-ring"]

# Tracing
tracing = ["dep:tracing", "openark-vine-oauth/tracing"]

[dependencies]
openark-core = { workspace = true, optional = true }
openark-vine-oauth = { workspace = true }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
chrono = { workspace = true, features = ["alloc"] }
clap = { workspace = true, optional = true, features = ["derive"] }
http = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true, features = ["schemars"] }
kube = { workspace = true, optional = true, features = ["derive"] }
schemars = { workspace = true, optional = true, features = [
    "chrono04",
    "derive",
    "url2",
] }
serde = { workspace = true, optional = true, features = ["alloc", "derive"] }
serde-json = { workspace = true, features = ["alloc"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true, features = ["attributes"] }
url = { workspace = true }
