[package]
name = "openark-vine-dashboard-backend"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "cors-allow-any",
    "default-tls",
    "opentelemetry-all",
    # "opentelemetry-otlp",
]

cors-allow-any = ["dep:actix-cors"]

# OpenTelemetry
opentelemetry = [
    "dep:actix-web-opentelemetry",
    "openark-core/opentelemetry",
    "tracing",
]
opentelemetry-all = [
    "openark-core/opentelemetry-all",
    "opentelemetry-logs",
    "opentelemetry-metrics",
    "opentelemetry-trace",
]
opentelemetry-otlp = ["openark-core/opentelemetry-otlp", "opentelemetry"]

# OpenTelemetry pillars and functions
opentelemetry-logs = ["openark-core/opentelemetry-logs", "opentelemetry"]
opentelemetry-metrics = [
    "actix-web-opentelemetry?/metrics",
    "openark-core/opentelemetry-metrics",
    "opentelemetry",
]
opentelemetry-trace = ["openark-core/opentelemetry-trace", "opentelemetry"]

# TLS
default-tls = ["rustls-tls"]
openssl-tls = [
    "actix-web/openssl",
    "kube/openssl-tls",
    "openark-core/openssl-tls",
    "openark-vine-oauth/openssl-tls",
    "reqwest/native-tls",
]
rustls-tls = [
    "actix-web/rustls-0_23",
    "kube/rustls-tls",
    "openark-core/rustls-tls",
    "openark-vine-oauth/rustls-tls",
    "reqwest/rustls-tls",
]

# Tracing
tracing = ["dep:tracing", "openark-core/tracing", "openark-vine-oauth/tracing"]

[dependencies]
openark-core = { workspace = true, features = ["clap", "std"] }
openark-vine-dashboard-api = { workspace = true, features = [
    "kube",
    "serde",
    "std",
] }
openark-vine-oauth = { workspace = true, features = [
    "actix-web",
    "clap",
    "kube",
    "std",
] }

actix-cors = { workspace = true, optional = true }
actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true, optional = true }
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "std"] }
jsonwebtoken = { workspace = true }
k8s-openapi = { workspace = true, features = [
    # "std",
] }
kube = { workspace = true, features = ["admission"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde-json = { workspace = true, features = ["std"] }
tracing = { workspace = true, optional = true, features = [
    "attributes",
    "std",
] }
